# software_test_report_template

./: .flake8  .gitchangelog.rc  .gitignore  .pre-commit-config.yaml  .repolite.yml  CONTRIBUTING.rst  Makefile  README.rst  pyproject.toml  requirements-dia.txt  tox.ini
.github/workflows/: check.yml
resources/: STR_DID_DI-IPSC-81440.txt  SVD_DID_DI-IPSC-81439.txt  acme_webservice.py  example-title-page.rst
std/: EU_STD.rst  Makefile
std/styles/: rst2pdf.style  std.yaml
str/: EU_STR.rst  Makefile
str/styles/: cui.yaml
